fix: TestClass ТЗ-15